--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ MarkupSafe==1.1.1
 python-dotenv==0.10.3
 requests==2.22.0
 soupsieve==1.9.5
+SQLAlchemy==1.3.12
 urllib3==1.25.7
 visitor==0.1.3
 Werkzeug==0.16.0
